# shopify-promo-guard

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .mcp.json  .worktreeinclude  CLAUDE.md  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  STATE.md  cloudbuild.yaml  docker-compose.yml  package-lock.json  package.json  shopify.app.toml  vitest.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-auditor.md
.claude/commands/: next-task.md  status.md  verify.md
.claude/output-styles/: terse.md
.claude/rules/: database.md  mcp-tools.md  polaris-ui.md  security.md  shopify-functions.md  testing.md
.claude/skills/: explore-codebase.md
app/: db.server.ts  routes.ts  shopify.server.ts  test-setup.ts
app/components/: activation-nudge.tsx  code-picker.tsx  create-new-discount.tsx  daily-chart.tsx  discount-creation-form.tsx  discount-preview.tsx  offer-form.tsx  (+6 more)
docs/: admin-ui-spec.md  build-orchestration-spec.md  build-plan.md  build-run-prompt.md  cron-setup.md  database-design.md  function-queries-spec.md  incident-response.md  landing-page-spec.md  my-idea.md  normalization-spec.md  platform-admin-spec.md  polaris-standards.md  scoring-constants.json  scoring-spec.md  system-design.md  webhook-spec.md
prisma/: schema.prisma
scripts/: backfill-billing-and-card.ts  backfill-billing.ts  backfill-ip-hashes.ts  e2e-smoke.sh  generate-constants.ts  seed-dev.ts  setup-gcp-secrets.sh  setup-worker-alerts.sh  verify-fixtures.ts
shared-rust/: Cargo.toml
shared-rust/src/: constants.rs  hash.rs  lib.rs  minhash.rs  normalize.rs  scoring.rs
shared-rust/src/normalize/: address.rs  email.rs  mod.rs  phone.rs
shared-rust/src/scoring/: checkout.rs  constants.rs  mod.rs
shared-rust/tests/: address_vectors.rs  checkout_scoring.rs  email_vectors.rs  fixture_vectors.rs  hash_sanity.rs  minhash_vectors.rs  phone_vectors.rs
(+193 files in other folders)
