[package]
name = "promo-guard-shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "promo_guard_shared"
path = "src/lib.rs"

[dependencies]
# unicode-normalization provides NFKD decomposition for address normalization
# (docs/normalization-spec.md §3 step 2). Added in T09 to satisfy the Vietnamese
# diacritic test vector "Số 12 Đường Lê Lợi" → "so 12 duong le loi".
# Invariant 4 of the spec ("no external crates") predates this and stands as a
# binary-size guideline for Function extensions; unicode-normalization is pure
# Rust with compile-time tables and adds ~40–80 KB, well within the 256 KB cap.
unicode-normalization = "0.1.25"

# Dev-only deps: used to deserialize docs/test-fixtures/hash-vectors.json in
# shared-rust/tests/fixture_vectors.rs. They never ship with the Function wasm.
[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
